--- a/mdm-center/src/main/resources/application-prod.yml
+++ b/mdm-center/src/main/resources/application-prod.yml
@@ -1,11 +1,11 @@
 # 数据源配置spring:
 datasource:
   druid:
-    url: jdbc:mysql://rm-wz95919qdqyonlbjn2o.mysql.rds.aliyuncs.com:3306/ehr_backend_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-    username: pindao_test
-    password: test@pindao
+    url: jdbc:mysql://rm-bp1kg560aa6059zbx.mysql.rds.aliyuncs.com/infrabase_mdm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+    username: teacore_rds
+    password: teacore-rds@pindao
 
 # dubbo 注册地址配置
 dubbo:
   registry:
-    address: nacos://mse-bdaddb10-nacos-ans.mse.aliyuncs.com:8848
+    address: nacos://mse-ff0ef170-nacos-ans.mse.aliyuncs.com:8848
