--- a/mdm-center/src/main/resources/application-prod.yml
+++ b/mdm-center/src/main/resources/application-prod.yml
@@ -1,9 +1,10 @@
-# 数据源配置spring:
-datasource:
-  druid:
-    url: jdbc:mysql://rm-bp1kg560aa6059zbx.mysql.rds.aliyuncs.com/infrabase_mdm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
-    username: teacore_rds
-    password: teacore-rds@pindao
+# 数据源配置
+spring:
+  datasource:
+    druid:
+      url: jdbc:mysql://rm-bp1kg560aa6059zbx.mysql.rds.aliyuncs.com/infrabase_mdm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+      username: teacore_rds
+      password: teacore-rds@pindao
 
 # dubbo 注册地址配置
 dubbo:
