增加源码包

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,9 @@
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
@@ -190,6 +193,9 @@
                     <executions>
                         <execution>
                             <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
