--- a/mdm-center/src/main/resources/application-dev.yml
+++ b/mdm-center/src/main/resources/application-dev.yml
@@ -5,6 +5,7 @@ spring:
       url: jdbc:mysql://rm-wz95919qdqyonlbjn2o.mysql.rds.aliyuncs.com:3306/ehr_backend_dev?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: pindao_dev
       password: dev@pindao
+      max-active: 20
 
 # dubbo 注册地址配置
 dubbo:
